Cleaning up some functions

--- a/Reagent Caculator.ipynb
+++ b/Reagent Caculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,19 +109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_reagents(reagent_list):\n",
-    "    reagent_list = [i.split(\" \") for i in reagents.value.split(\"\\n\")]\n",
-    "    reagents_check = [\"({}){}\".format(i[0],i[1]) for i in reagent_list]\n",
-    "    reagents_eq = \"+\".join(reagents_check)\n",
-    "    \n",
-    "    reagents_out = [reagents_eq]\n",
-    "\n",
-    "    return reagent_list\n",
-    "\n",
     "def calculate_reagents(reagent_list, moles):\n",
     "    reagent_list = {i[0]:i[1] for i in reagent_list}\n",
     "    reagents_out = []\n",
@@ -154,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,8 +195,7 @@
     "        output.clear_output()\n",
     "        target = target_comp.value\n",
     "        formula = parse_molecule(target)\n",
-    "        reagent_list = reagents.value\n",
-    "        reagent_list = read_reagents(reagent_list)\n",
+    "        reagent_list = [i.split(\" \") for i in reagents.value.split(\"\\n\")]\n",
     "        print(format_equation(reagent_list, target))\n",
     "        #print(\"Parsed formula:\")\n",
     "        #print(formula)\n",
@@ -230,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,13 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9a52bac9a534058bfddba8afd524859",
+       "model_id": "e59e5c0f878541a58d6f079e52246495",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,6 +261,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
