--- a/Reagent Caculator.ipynb
+++ b/Reagent Caculator.ipynb
@@ -119,11 +119,11 @@
     "    for i in reagent_list.keys():\n",
     "        formula = parse_molecule(i)\n",
     "        rmm = calculate_rmm(formula)\n",
-    "        moles = float(reagent_list[i]) * moles\n",
+    "        moles_req = float(reagent_list[i]) * moles\n",
     "        reagents_out.append(i)\n",
     "        reagents_out.append(\"RMM: {:.4f}\".format(rmm))\n",
-    "        reagents_out.append(\"Moles: {:e}\".format(moles))\n",
-    "        reagents_out.append(\"Mass required: {:.4f} g\".format(moles * rmm))\n",
+    "        reagents_out.append(\"Moles: {:e}\".format(moles_req)\n",
+    "        reagents_out.append(\"Mass required: {:.4f} g\".format(moles_req * rmm))\n",
     "        reagents_out.append(\"-\"*10)\n",
     "    return \"\\n\".join(reagents_out)\n",
     "\n",
