--- a/Reagent Caculator.ipynb
+++ b/Reagent Caculator.ipynb
@@ -122,7 +122,7 @@
     "        moles_req = float(reagent_list[i]) * moles\n",
     "        reagents_out.append(i)\n",
     "        reagents_out.append(\"RMM: {:.4f}\".format(rmm))\n",
-    "        reagents_out.append(\"Moles: {:e}\".format(moles_req)\n",
+    "        reagents_out.append(\"Moles: {:e}\".format(moles_req))\n",
     "        reagents_out.append(\"Mass required: {:.4f} g\".format(moles_req * rmm))\n",
     "        reagents_out.append(\"-\"*10)\n",
     "    return \"\\n\".join(reagents_out)\n",
