--- a/Reagent Caculator.ipynb
+++ b/Reagent Caculator.ipynb
@@ -11,7 +11,9 @@
     "import numpy as np\n",
     "import math\n",
     "import ipywidgets as widgets\n",
-    "from IPython.display import display, clear_output"
+    "from IPython.display import display, clear_output\n",
+    "!pip install voila\n",
+    "!jupyter serverextension enable --sys-prefix voila"
    ]
   },
   {
