--- a/Reagent Caculator.ipynb
+++ b/Reagent Caculator.ipynb
@@ -12,8 +12,8 @@
     "import math\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output\n",
-    "#!pip install voila\n",
-    "#!jupyter serverextension enable --sys-prefix voila"
+    "!pip install voila\n",
+    "!jupyter serverextension enable --sys-prefix voila"
    ]
   },
   {
