--- a/Reagent Caculator.ipynb
+++ b/Reagent Caculator.ipynb
@@ -11,9 +11,7 @@
     "import numpy as np\n",
     "import math\n",
     "import ipywidgets as widgets\n",
-    "from IPython.display import display, clear_output\n",
-    "!pip install voila\n",
-    "!jupyter serverextension enable --sys-prefix voila"
+    "from IPython.display import display, clear_output\n"
    ]
   },
   {
